kubernetes/apps/demo-app/opentelemetry-demo/services/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo.intra.falhalla.com
spec:
  tls:
  - hosts:
      - demo.intra.falhalla.com
    secretName: demo-intra-falhalla-tls
  rules:
  - host: demo.intra.falhalla.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opentelemetry-demo-frontend
            port:
              number: 8080
